# libixcom

./: .gitmodules  .travis.yml  README.md  travis.sh
c/: CMakeLists.txt
c/include/ixcom/: XCOMdat.h  decode.h  encode.h  messages.h
c/src/: CMakeLists.txt  decode.c  encode.c
c/test/: CMakeLists.txt  check_ixcom.c  check_main.c
